# gammaray-mcp-bridge

./: .gitignore  README.md  pyproject.toml
bridge/: CMakeLists.txt  run.sh
bridge/src/: gammaray_session.cpp  gammaray_session.h  main.cpp  material_interface.cpp  material_interface.h  property_reader.cpp  property_reader.h  qml_engine_tools.cpp  qml_engine_tools.h  quickinspector_proxy.cpp  quickinspector_proxy.h  quickinspector_types.h  scenegraph_tools.cpp  scenegraph_tools.h  widget_inspector_proxy.cpp  widget_inspector_proxy.h  widget_tools.cpp  widget_tools.h
tests/: README.md  __init__.py  conftest.py  mcp_client.py  run_tests.sh  run_widget_tests.sh  run_with_uv.py  test_connection.py  test_items.py  test_navigation.py  test_qml_engine.py  test_scenegraph.py  test_widgets.py
tests/testapp/: main.qml  widget_test_app.cpp
