[project]
name = "gammaray-mcp-tests"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "probe: tests that require a running GammaRay probe",
]
filterwarnings = ["ignore::DeprecationWarning"]